# suai-saod

./: .gitignore  pyproject.toml  readme.md
common/: benchmark.py  comparable.py  extra_typing.py
lab2/: benchmark.py  main.py  readme.md  tests.py
lab2/linked_list/: doubly_linked_list.py  linked_list.py
lab2/stack/: not_growable_stack.py  stack.py  stack_linked_list.py
lab3/: benchmark.py  main.py  readme.md  tests.py
lab3/models/: number.py  student.py
lab3/serializers/: ordered_binary_tree_serializer.py
lab3/trees/: avl_tree.py  ordered_binary_tree.py  search_tree.py  ternary_trie.py  trie.py
lab4/: benchmark.py  main.py  readme.md  tests.py
lab4/algs/arrays/: insertion_sort.py  merge_sort.py
lab4/algs/linked_list/: counting_sort.py  gnome_sort.py
lab4/arrays/: array.py  dynamic_array.py  not_growable_array.py
lab4/models/: book.py
lab5/: benchmark.py  main.py  readme.md  tests.py  type_aliases.py
lab5/algs/: fibonacci_search.py  interpolation_search.py
lab6/: benchmark.py  main.py  readme.md  tests.py
lab6/algs/adjacency_matrix/: dijkstra.py  topological_sort.py
lab6/graph/: adjacency_matrix_graph.py  graph.py
lab6/serializers/: graph_serializer.py
